feat: Implement Employee management and authentication system
- Created EmployeeRepository for CRUD operations on Employee entity.
- Developed CustomUserDetailsService to load user details for authentication.
- Added JwtAuthenticationFilter to handle JWT token validation for incoming requests.
- Implemented AuthService for handling login and JWT token generation.
- Created EmployeeService for business logic related to Employee management.
- Developed JwtUtil for JWT token creation and validation.
- Added AuthController with endpoints for login and token validation.
- Implemented unit and integration tests for AuthController and AuthService.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
   # Cấu hình JPA/Hibernate
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: none
     show-sql: true # Hiển thị SQL queries trong console
     format-sql: true # Format SQL cho dễ đọc
     properties:
@@ -29,6 +29,12 @@ spring:
       write-dates-as-timestamps: false
   flyway:
     enabled: false
+
+  # Cấu hình SQL initialization
+  # sql:
+  #   init:
+  #     mode: always # Chạy data.sql mỗi lần khởi động
+  #     data-locations: classpath:data.sql
 
 # Cấu hình logging
 logging:
@@ -63,6 +69,10 @@ management:
     health:
       show-details: when-authorized
 
+# Cấu hình JWT
+jwt:
+  secret: supermarket-secret-key-for-jwt-token-generation-2024-very-long-secret-key
+  expiration: 86400000 # 24 hours in milliseconds
 
 ---
 # Profile cho development
