--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   # Cấu hình datasource cho MySQL
   datasource:
-    url: jdbc:mysql://localhost:3306/supermarket_db?useSSL=false&serverTimezone=Asia/Ho_Chi_Minh&allowPublicKeyRetrieval=true
+    url: jdbc:mysql://localhost:3306/test?useSSL=false&serverTimezone=Asia/Ho_Chi_Minh&allowPublicKeyRetrieval=true
     username: root
     password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -9,7 +9,7 @@ spring:
   # Cấu hình JPA/Hibernate
   jpa:
     hibernate:
-      ddl-auto: none
+      ddl-auto: update
     show-sql: true # Hiển thị SQL queries trong console
     format-sql: true # Format SQL cho dễ đọc
     properties:
@@ -53,7 +53,6 @@ logging:
 server:
   port: 8080
   servlet:
-    context-path: /api
     encoding:
       charset: UTF-8
       enabled: true
