--- a/pom.xml
+++ b/pom.xml
@@ -101,6 +101,20 @@
 			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
 			<version>2.8.11</version>
 		</dependency>
+		
+		<!-- AWS SDK for S3-->
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>s3</artifactId>
+            <version>2.21.42</version>
+        </dependency>
+		
+		<!-- Apache Commons FileUpload cho xử lý file upload -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.12.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
