feat: Add AWS configuration for S3 storage in application.yml

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -94,4 +94,8 @@ product:
     allowed-types: image/jpeg,image/png,image/gif,image/webp
     max-count: 5
 #Cấu hình aws
-
+aws:
+  accessKeyId: ${ACCESS_KEY_ID}
+  secretAccessKey: ${SECRET_ACCESS_KEY}
+  region: ap-southeast-1
+  bucketName: ${BUCKET_NAME}
