--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
   # Cấu hình JPA/Hibernate
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: none
     show-sql: true # Hiển thị SQL queries trong console
     format-sql: true # Format SQL cho dễ đọc
     properties:
