--- a/pom.xml
+++ b/pom.xml
@@ -101,6 +101,13 @@
 			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
 			<version>2.8.11</version>
 		</dependency>
+
+		<!-- PayOS Java SDK -->
+		<dependency>
+			<groupId>vn.payos</groupId>
+			<artifactId>payos-java</artifactId>
+			<version>2.0.1</version>
+		</dependency>
 		
 		<!-- AWS SDK for S3-->
         <dependency>
