feat: Implement Enhanced Chat Service with Manual Function Calling
- Added EnhancedChatServiceImpl to handle AI chat with manual function calling.
- Integrated tool execution for order lookup, promotions, product search, stock check, and product details.
- Updated ProductServiceImpl to support AI chat with product search, stock check, and product details retrieval.
- Enhanced PromotionLookupServiceImpl to provide detailed promotion information for AI chat.
- Modified application.yml to change Hibernate ddl-auto setting and update AI model configuration.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
   # Cấu hình JPA/Hibernate
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: none
     show-sql: true # Hiển thị SQL queries trong console
     format-sql: true # Format SQL cho dễ đọc
     properties:
@@ -41,7 +41,7 @@ spring:
         base-url: https://generativelanguage.googleapis.com
         completions-path: /v1beta/openai/chat/completions
         options:
-          model: gemini-2.0-flash
+          model: gemini-flash-lite-latest
 
 # Cấu hình logging
 logging:
