feat: Implement promotion search service and related tools
- Added PromotionSearchServiceImpl to handle active promotions retrieval.
- Created tools for cart management: AddToCartTool, ClearCartTool, GetCartTool, RemoveFromCartTool, UpdateCartQuantityTool.
- Implemented OrderSearchTool and ProductSearchTool for order and product retrieval.
- Updated application.yml to allow dynamic SQL logging configuration.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,8 +10,7 @@ spring:
   jpa:
     hibernate:
       ddl-auto: none
-    show-sql: true # Hiển thị SQL queries trong console
-    format-sql: true # Format SQL cho dễ đọc
+    show-sql: ${SHOW_SQL:true} # Hiển thị SQL queries trong console
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQLDialect
@@ -42,6 +41,7 @@ spring:
         completions-path: /v1beta/openai/chat/completions
         options:
           model: gemini-flash-lite-latest
+          temperature: 0.5
 
 # Cấu hình logging
 logging:
