feat(favorites): Implement customer favorite products management system
- Add CustomerFavoriteController with endpoints for managing favorite products
- Create AddFavoriteRequest and CustomerFavoriteResponse DTOs for API contracts
- Implement CustomerFavoriteService and CustomerFavoriteServiceImpl for business logic
- Add CustomerFavoriteRepository for database operations
- Update CustomerFavorite and CustomerFavoriteId entities with enhanced functionality
- Enhance ProductResponse and ProductListResponse to include favorite status
- Update ProductService and ProductServiceImpl to support favorite tracking
- Add comprehensive AI testing suite with accuracy and latency metrics tests
- Update application.yml configuration for new features
- Enable customers to add, remove, and check favorite products with proper validation and error handling

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
   # Cấu hình JPA/Hibernate
   jpa:
     hibernate:
-      ddl-auto: none
+      ddl-auto: update
     show-sql: ${SHOW_SQL:true} # Hiển thị SQL queries trong console
     properties:
       hibernate:
