--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
   # Cấu hình JPA/Hibernate
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: none
     show-sql: ${SHOW_SQL:true} # Hiển thị SQL queries trong console
     properties:
       hibernate:
