feat(product): Add barcode generation and search functionality with S3 integration
- Add ZXing library dependency (core and javase) for barcode generation
- Create BarcodeService interface with methods for generating barcodes in various formats
- Implement BarcodeServiceImpl with barcode generation and S3 upload capabilities
- Add generateRandomEAN13() method to create random EAN-13 codes
- Add barcodeImageUrl field to ProductUnit entity for storing S3 barcode image URLs
- Implement getProductByBarcode() method in ProductService and ProductServiceImpl
- Add new API endpoint GET /api/products/barcode/{barcode} for searching products by barcode
- Extend S3FileUploadService interface with uploadFile() method to support byte array uploads
- Update S3FileUploadServiceImpl to handle byte array file uploads with custom content types
- Enable barcode image storage and retrieval from S3 for product units

--- a/pom.xml
+++ b/pom.xml
@@ -173,6 +173,18 @@
 			<groupId>com.fasterxml.jackson.datatype</groupId>
 			<artifactId>jackson-datatype-jsr310</artifactId>
 		</dependency>
+
+		<!-- ZXing for barcode generation -->
+		<dependency>
+			<groupId>com.google.zxing</groupId>
+			<artifactId>core</artifactId>
+			<version>3.5.2</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.zxing</groupId>
+			<artifactId>javase</artifactId>
+			<version>3.5.2</version>
+		</dependency>
 	</dependencies>
 
 	<repositories>
